--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -45,4 +45,51 @@
     }
 }
 
+
+
+.spinner {
+    border: 3px solid #ccc;
+    border-radius: 50%;
+    border-top: 3px solid #2c3e50;
+    width: 20px;
+    height: 20px;
+    margin: auto;
+    margin-bottom: 7px;
+    -webkit-animation: load .7s linear infinite;
+    animation: load .7s linear infinite;
+}
+
+@-webkit-keyframes load {
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes load {
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+
+/* Scrollbar styles */
+::-webkit-scrollbar {
+    width: 12px;
+    height: 12px;
+    }
+    
+    ::-webkit-scrollbar-track {
+    background: #f5f5f5;
+    border-radius: 10px;
+    }
+    
+    ::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: #ccc;  
+    }
+    
+    ::-webkit-scrollbar-thumb:hover {
+    background: #999;
+    }
+
 @tailwind utilities;
